@@ -765,6 +765,7 @@ tcp_process(struct tcp_pcb *pcb)
     pcb->tmr = tcp_ticks;
   }
   pcb->keep_cnt_sent = 0;
+  pcb->persist_probe = 0;
 
   tcp_parseopt(pcb);
 
@@ -1093,10 +1094,11 @@ tcp_receive(struct tcp_pcb *pcb)
           /* start persist timer */
           pcb->persist_cnt = 0;
           pcb->persist_backoff = 1;
+          pcb->persist_probe = 0;
         }
       } else if (pcb->persist_backoff > 0) {
         /* stop persist timer */
-          pcb->persist_backoff = 0;
+        pcb->persist_backoff = 0;
       }
       LWIP_DEBUGF(TCP_WND_DEBUG, ("tcp_receive: window update %"TCPWNDSIZE_F"\n", pcb->snd_wnd));
 #if TCP_WND_DEBUG
